--- a/style.css
+++ b/style.css
@@ -1,27 +1,43 @@
 h1 {
   font-family: 'Overpass';
-  font-size: 24px;
+  font-size: 32px;
+  color: #eeeeee;
+  margin-left: 75px;
+  margin-right: 75px;
+  text-align: center;
 }
 
-hr {
-       display: block;
-       position: relative;
-       padding: 0;
-       margin: 8px auto;
-       height: 0;
-       width: 400px;
-       max-height: 0;
-       font-size: 1px;
-       line-height: 0;
-       clear: both;
-       border: none;
-       border-top: 1px solid #aaaaaa;
-       border-bottom: 1px solid #ffffff;
-    }
+h2 {
+  font-family: 'Overpass';
+  font-size: 18px;
+  color: #eeeeee;
+  margin-left: 75px;
+  margin-right: 75px;
+  text-align: center;
+}
+
+h3 {
+  font-family: 'Overpass';
+  font-size: 28px;
+  color: #eeeeee;
+  margin-left: 75px;
+  margin-right: 75px;
+  text-align: center;
+}
+
+body {
+  background-color: #222831;
+}
 
 button {
+  font-family: 'Overpass';
+  color: #222831;
+  background-color: #ffa900;
+  font-size: 18px;
   height: 50px;
-  width: 50px;
+  width: 100px;
   outline: none;
-  margin-left:175px;
+  margin-left: 110px;
+  border-radius: 7%;
+  border-color: #ffa900;
 }
